---------------------------------------------------------------------------------------------------
Version: 20.0.4
Date: 2020-10-XXXXX
  Features:
    - Added remote interface to add Gui text in addition to the Factorio command.
  Changes:
    - Custom colors renamed to be camel cased: only lightred to lightRed, and guiHeadingColor to guiHeadingColor. The standard color names in the list remain all lower cased. `lightred` was in example text in readme previously.
  Bugfixes:
  Info:
    - Mod tidy up - Mod globals related to close buttons will remove themselves when finished with. Avoids the global list getting infinitely long which could in theory cause slowness or save file size growth over millennium. Makes any future debugging easier.
---------------------------------------------------------------------------------------------------
Version: 20.0.3
Date: 2020-12-02
  Features:
    - Update to Factorio 1.1 as-is.
  Changes:
  Bugfixes:
    - Fix crash for regular type font usage.
  Info:
    - Update to latest Utility library. Messages created in older mod versions may not display correctly.
---------------------------------------------------------------------------------------------------
Version: 18.0.2
Date: 2020-02-16
  Features:
    - Simple text has a "maxWidth" OPTIONAL option to limit the width and wrap the message text on to new lines.
  Changes:
    - Updated to use updated Muppet GUI and style library for compatibility with other mods. Visually approximately the same.
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.0.1
Date: 2020-01-26
  Features:
  Changes:
  Bugfixes:
    - fix issue when clicking in unexpected gui elements, i.e. flows.
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.0.0
Date: 2020-01-23
  Features:
    - Initial Release
  Changes:
  Bugfixes:
  Info: