@@ -5,6 +5,7 @@ Date: 2020-10-XXXXX
     - Added remote interface to add Gui text in addition to the Factorio command.
   Changes:
     - Custom colors renamed to be camel cased: only lightred to lightRed, and guiHeadingColor to guiHeadingColor. The standard color names in the list remain all lower cased. `lightred` was in example text in readme previously.
+    - Small text gets a smaller x close button so the GUI background isn't expanded just for it.
   Bugfixes:
   Info:
     - Mod tidy up - Mod globals related to close buttons will remove themselves when finished with. Avoids the global list getting infinitely long which could in theory cause slowness or save file size growth over millennium. Makes any future debugging easier.
